layout: fix weird spacing on short pages (but breaks footer)

--- a/css/vgn.css
+++ b/css/vgn.css
@@ -32,6 +32,7 @@ h2 {
   color: #fff;
   display: inline-block;
   width: fit-content;
+  height: fit-content;
 }
 h2 a {
   text-decoration: none;
@@ -50,6 +51,7 @@ h3 {
   color: #fff;
   display: inline-block;
   width: fit-content;
+  height: fit-content;
 }
 
 h4 {
@@ -175,7 +177,7 @@ footer img {
 body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: min-content max-content max-content;
+  grid-template-rows: min-content max-content min-content;
   row-gap: 2em;
   grid-template-areas:
     "header header header"
@@ -198,14 +200,14 @@ h1 {
 }
 
 main {
-  display: grid;
+  /*display: grid;*/
   grid-area:  main;
-  row-gap: 1.6em;
 }
 
 .line {
   display: grid;
   grid-template-columns: max-content 1fr;
+  margin: 1.2em 0 1.2em 0;
 }
 .line p, .line h2, .line h3 {
   align-self: center;
@@ -253,7 +255,6 @@ body.admin {
 }
 
 main {
-
 }
 
 footer {
